[gd_scene load_steps=10 format=3 uid="uid://cy7232f5xniil"]

[ext_resource type="Script" path="res://Units/wagon.gd" id="1_24qf5"]
[ext_resource type="Texture2D" uid="uid://bq3bbh6en201i" path="res://Assets/Wagon/BowWagon.png" id="2_fgr36"]
[ext_resource type="Texture2D" uid="uid://bxbrf5wu4ksfw" path="res://Assets/Wagon/MainWagon.png" id="3_74cm7"]
[ext_resource type="Texture2D" uid="uid://cj7smce3ci5g7" path="res://Assets/Wagon/ResourceWagon.png" id="4_xl4qy"]
[ext_resource type="Texture2D" uid="uid://ds5deyb62h55" path="res://Assets/Wagon/SwordWagon.png" id="5_3ieid"]
[ext_resource type="PackedScene" uid="uid://dyewi7ipnw4vu" path="res://Global/Health Bars/BasicHealthBar.tscn" id="8_f21ow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2kfxd"]
bg_color = Color(0, 0.658824, 0.854902, 0.227451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.658824, 0.854902, 0.752941)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1jnf0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agtqq"]
size = Vector2(34, 32)

[node name="Wagon" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_24qf5")

[node name="SelectedPanel" type="Panel" parent="."]
visible = false
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2kfxd")

[node name="InteractionPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -22.0
offset_right = 23.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_1jnf0")

[node name="WagonCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_agtqq")

[node name="SwordWagon" type="Sprite2D" parent="WagonCollision"]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_3ieid")

[node name="ResourceWagon" type="Sprite2D" parent="WagonCollision"]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_xl4qy")

[node name="MainWagon" type="Sprite2D" parent="WagonCollision"]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_74cm7")

[node name="BowWagon" type="Sprite2D" parent="WagonCollision"]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_fgr36")

[node name="BasicHealthBar" parent="." instance=ExtResource("8_f21ow")]
z_index = 20
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = -16.0
value = 100.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FoodTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="gui_input" from="InteractionPanel" to="." method="_on_interaction_panel_gui_input"]
[connection signal="mouse_entered" from="InteractionPanel" to="." method="_on_interaction_panel_mouse_entered"]
[connection signal="mouse_exited" from="InteractionPanel" to="." method="_on_interaction_panel_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer"]
[connection signal="timeout" from="FoodTimer" to="." method="_on_food_timer_timeout"]
